****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- Configuration/Compilation
    * Fixed OpenBSD and NetBSD build issues.

Third party components
----------------------

- Updated Qt's SQLite version to 3.3.13.

- Updated Qt's FreeType version to 2.3.0.

- Updated Qt's libpng version to 1.2.16.


****************************************************************************
*                          Library                                         *
****************************************************************************

 - QPrinter
        Added QPrinter::supportedPaperSources()

 - QChar
        Updated the Unicode tables to Unicode 5.0

 - QHeaderView
        Now uses Qt::NoFocus for its default focus policy

 - QTextDocumentFragment
        QTextDocumentFragment no more stores the root frame properties,
        the document title or the document default font when it's created
        from a document or from HTML. Use QTextDocument's toHtml/setHtml
        if you want to propagate these properties to and from HTML.


 - QTabBar 
        Added int tabAt(const QPoint &pos) const